# nostr-devs

./: .gitignore  Cargo.toml  README.md  askama.toml  build.rs  deploy_script.sh  package.json  remote_deploy.sh  tailwind.config.cjs
.github/workflows/: rust.yml
public/styles/: output.css
src/: main.rs  server.rs
src/hat/: consts.rs  events.rs  handlers.rs  homepage.rs  html.rs  mod.rs
src/styles/: input.css
src/templates/: event.html  footer.html  header.html  home.html  index.html
