[package]
name = "nostrdevs-htmx"
version = "0.1.0"
edition = "2021"


[lib]
name = "hat"
path = "src/hat/mod.rs"

[[bin]]
name = "nostrdevs-htmx-server"
path = "src/server.rs"

[features]
default = []
reload = []

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.7", features = ["tokio"] }
serde = "1.0.213"
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
